Pre-commit fixes.

--- a/test/imagenator/imagenator_Regression.ipynb
+++ b/test/imagenator/imagenator_Regression.ipynb
@@ -129,8 +129,12 @@
    "source": [
     "if environment_information is not None:\n",
     "    # Build the request\n",
-    "    request = Request(collection=filter_collection, granule_id=[filter_granule],\n",
-    "                      variables='product/vertical_column_stratosphere',format='image/png')\n",
+    "    request = Request(\n",
+    "        collection=filter_collection,\n",
+    "        granule_id=[filter_granule],\n",
+    "        variables='product/vertical_column_stratosphere',\n",
+    "        format='image/png',\n",
+    "    )\n",
     "    print(harmony_client.request_as_curl(request))\n",
     "\n",
     "    # Submit and wait for completion\n",
@@ -213,8 +217,12 @@
    "source": [
     "if environment_information is not None:\n",
     "    # Build the request\n",
-    "    request = Request(collection=filter_collection, granule_id=[filter_granule],\n",
-    "                      variables='product/vertical_column_stratosphere',format='image/png')\n",
+    "    request = Request(\n",
+    "        collection=filter_collection,\n",
+    "        granule_id=[filter_granule],\n",
+    "        variables='product/vertical_column_stratosphere',\n",
+    "        format='image/png',\n",
+    "    )\n",
     "    print(harmony_client.request_as_curl(request))\n",
     "\n",
     "    # Submit and wait for completion\n",
