TRT-680: Migrate SMAP L2 Gridder tests to use hashing.

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -115,7 +115,7 @@
     "\n",
     "sys.path.append('../shared_utils')\n",
     "from utilities import print_success, submit_and_download\n",
-    "from compare import compare_results_to_reference_file"
+    "from compare import nc4_matches_reference_hash_file"
    ]
   },
   {
@@ -289,20 +289,19 @@
     "            )\n",
     "            test_output = tmp_dir / Path(f'{collection}.nc')\n",
     "            test_reference = Path(\n",
-    "                f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
+    "                f'reference_files/{test_output.stem}_reference.json'\n",
     "            )\n",
     "\n",
     "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
     "            assert Path(\n",
     "                test_output\n",
-    "            ).exists, 'Unsuccessful Harmony Request: {collection}: {test_name}'\n",
-    "            compare_results_to_reference_file(\n",
+    "            ).exists, f'Unsuccessful Harmony Request: {collection}'\n",
+    "            assert nc4_matches_reference_hash_file(\n",
     "                test_output,\n",
     "                test_reference,\n",
-    "                identical=False,\n",
-    "                subset_selector=test_config.get('selector', None),\n",
-    "            )\n",
+    "            ), f'Output and reference files do not match: {collection}'\n",
+    "\n",
     "        print_success(f'{collection} Test.')\n",
     "\n",
     "    print_success('Entire Test Suite.')\n",
@@ -327,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
