TRT-680: Fix pre-commit issues.

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -288,9 +288,7 @@
     "                format='application/x-netcdf4',\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{collection}.nc')\n",
-    "            test_reference = Path(\n",
-    "                f'reference_files/{test_output.stem}_reference.json'\n",
-    "            )\n",
+    "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
     "\n",
     "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
