TRT-680: Use full files for SMAP L2 Gridder reference hashes.

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -125,9 +125,7 @@
    "source": [
     "### Set up test configuration\n",
     "\n",
-    "The next cell organizes the collections and granules to be tested in each environment.\n",
-    "\n",
-    "Additional selector configuration is set for choosing a subset of the generated output for direct comparison in the regression. The selector dictionaries have keys into the top level groups of the output dataset and their dictionaries are subsets along the defined dimensions.  This allows us to compare small parts of very large datasets."
+    "The next cell organizes the collections and granules to be tested in each environment."
    ]
   },
   {
@@ -137,68 +135,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spl2smp_e_selector = {\n",
-    "    \"Soil_Moisture_Retrieval_Data\": {\n",
-    "        \"y-dim\": slice(0, 1000),\n",
-    "        \"x-dim\": slice(1500, 2500),\n",
-    "    },\n",
-    "    \"Soil_Moisture_Retrieval_Data_Polar\": {\n",
-    "        \"y-dim\": slice(1000, 2000),\n",
-    "        \"x-dim\": slice(1000, 2000),\n",
-    "    },\n",
-    "}\n",
-    "\n",
-    "spl2smap_selector = {\n",
-    "    \"Soil_Moisture_Retrieval_Data_3km\": {\n",
-    "        \"y-dim\": slice(1000, 2000),\n",
-    "        \"x-dim\": slice(8800, 9800),\n",
-    "    },\n",
-    "    \"Soil_Moisture_Retrieval_Data\": {\n",
-    "        \"y-dim\": slice(0, 1000),\n",
-    "        \"x-dim\": slice(2500, 3500),\n",
-    "    },\n",
-    "}\n",
-    "\n",
-    "\n",
-    "spl2sma_slice = {\n",
-    "    \"y-dim\": slice(0, 1000),\n",
-    "    \"x-dim\": slice(9500, 10500),\n",
-    "}\n",
-    "\n",
-    "spl2sma_selector = {\n",
-    "    \"Soil_Moisture_Retrieval_Data\": spl2sma_slice,\n",
-    "    \"Radar_Data\": spl2sma_slice,\n",
-    "    \"Ancillary_Data\": spl2sma_slice,\n",
-    "}\n",
-    "\n",
-    "spl2smp_selector = {\n",
-    "    \"Soil_Moisture_Retrieval_Data\": {\n",
-    "        \"y-dim\": slice(0, 200),\n",
-    "        \"x-dim\": slice(400, 600),\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "\n",
     "non_production_configuration = {\n",
     "    'SPL2SMP_E': {\n",
     "        'collection_concept_id': Collection(id='C1268429712-EEDTEST'),\n",
     "        'granule_id': 'G1268429718-EEDTEST',\n",
-    "        'selector': spl2smp_e_selector,\n",
     "    },\n",
     "    'SPL2SMAP': {\n",
     "        'collection_concept_id': Collection(id='C1268429748-EEDTEST'),\n",
     "        'granule_id': 'G1268429753-EEDTEST',\n",
-    "        'selector': spl2smap_selector,\n",
     "    },\n",
     "    'SPL2SMA': {\n",
     "        'collection_concept_id': Collection(id='C1268429729-EEDTEST'),\n",
     "        'granule_id': 'G1268429743-EEDTEST',\n",
-    "        'selector': spl2sma_selector,\n",
     "    },\n",
     "    'SPL2SMP': {\n",
     "        'collection_concept_id': Collection(id='C1268429309-EEDTEST'),\n",
     "        'granule_id': 'G1268454418-EEDTEST',\n",
-    "        'selector': spl2smp_selector,\n",
     "    },\n",
     "}\n",
     "\n",
@@ -207,22 +159,18 @@
     "    'SPL2SMP_E': {\n",
     "        'collection_concept_id': Collection(id='TBD'),\n",
     "        'granule_id': '',\n",
-    "        'selector': spl2smp_e_selector,\n",
     "    },\n",
     "    'SPL2SMAP': {\n",
     "        'collection_concept_id': Collection(id='TBD'),\n",
     "        'granule_id': '',\n",
-    "        'selector': spl2smap_selector,\n",
     "    },\n",
     "    'SPL2SMA': {\n",
     "        'collection_concept_id': Collection(id='C1236303826-NSIDC_ECS'),\n",
     "        'granule_id': '',\n",
-    "        'selector': spl2sma_selector,\n",
     "    },\n",
     "    'SPL2SMP': {\n",
     "        'collection_concept_id': Collection(id='TBD'),\n",
     "        'granule_id': 'TBD',\n",
-    "        'selector': spl2smp_selector,\n",
     "    },\n",
     "}"
    ]
@@ -268,7 +216,7 @@
     "\n",
     "* The cell below loops through the SMAP L2 collections for the configured environment.\n",
     "* A request for gridding the L2 data is submitted to Harmony and the results downloaded.\n",
-    "* Verification compares the results to a previously generated and subsetted reference data file.  This comparison is done only on a selection of rows and columns from the downloaded data to save memory usage. \n"
+    "* Verification compares the results to a previously generated and subsetted reference data file."
    ]
   },
   {
