TRT-680: Convert NSIDC ICESat-2 test suite to use hashed reference files.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "sys.path.append('../shared_utils')\n",
     "from utilities import print_success, submit_and_download\n",
-    "from compare import compare_results_to_reference_file"
+    "from compare import h5_matches_reference_hash_file"
    ]
   },
   {
@@ -357,7 +357,9 @@
    "id": "e0788c88-6aee-450a-be35-087ba36a1d80",
    "metadata": {},
    "source": [
-    "The next cell runs through each of the subset by bounding box tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests."
+    "The next cell runs through each of the subset by bounding box tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests.\n",
+    "\n",
+    "**Note: In all test requests below, the global metadata attribute `Processing Parameters` is omitted from the comparison. This is because the string contains the name of the locally downloaded file within the Harmony container, which is a string representation of a hash. That hash may not be stable between different test runs. This attribute was omitted when generating the original hashed reference files.**"
    ]
   },
   {
@@ -368,6 +370,7 @@
    "outputs": [],
    "source": [
     "test_name = 'subset_bounding_box'\n",
+    "\n",
     "with TemporaryDirectory() as tmp_dir:\n",
     "    if configuration is not None:\n",
     "        for shortname, test_config in configuration[test_name].items():\n",
@@ -377,18 +380,20 @@
     "                spatial=test_config['spatial'],\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
-    "            test_reference = Path(\n",
-    "                f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
-    "            )\n",
+    "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
     "\n",
     "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
     "            assert exists(\n",
     "                test_output\n",
-    "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "            compare_results_to_reference_file(\n",
-    "                test_output, test_reference, identical=False\n",
-    "            )\n",
+    "            ), f'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "\n",
+    "            assert h5_matches_reference_hash_file(\n",
+    "                test_output,\n",
+    "                test_reference,\n",
+    "                skipped_metadata_attributes={'Processing Parameters'},\n",
+    "            ), f'Test output does not match reference file: {shortname}: {test_name}'\n",
+    "\n",
     "            print_success(f'{shortname} {test_name} test request complete.')\n",
     "\n",
     "        print_success(f'{test_name} test suite complete.')\n",
@@ -411,7 +416,9 @@
    "id": "edd687f2-d3cd-4dc0-8eed-6f205b6f1ab4",
    "metadata": {},
    "source": [
-    "As with the previous cell, The next cell runs through each of the temporal range tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests."
+    "As with the previous cell, The next cell runs through each of the temporal range tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests.\n",
+    "\n",
+    "**Note: In all test requests below, the global metadata attribute `Processing Parameters` is omitted from the comparison. This is because the string contains the name of the locally downloaded file within the Harmony container, which is a string representation of a hash. That hash may not be stable between different test runs. This attribute was omitted when generating the original hashed reference files.**"
    ]
   },
   {
@@ -422,6 +429,7 @@
    "outputs": [],
    "source": [
     "test_name = 'subset_by_temporal_range'\n",
+    "\n",
     "with TemporaryDirectory() as tmp_dir:\n",
     "    if configuration is not None:\n",
     "        for shortname, test_config in configuration[test_name].items():\n",
@@ -431,21 +439,20 @@
     "                temporal=test_config['temporal'],\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
-    "            test_reference = Path(\n",
-    "                f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
-    "            )\n",
+    "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
     "\n",
     "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
     "            assert exists(\n",
     "                test_output\n",
-    "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "            compare_results_to_reference_file(\n",
+    "            ), f'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "\n",
+    "            assert h5_matches_reference_hash_file(\n",
     "                test_output,\n",
     "                test_reference,\n",
-    "                identical=False,\n",
-    "                coordinates_to_fix=test_config['coords_to_rename'],\n",
-    "            )\n",
+    "                skipped_metadata_attributes={'Processing Parameters'},\n",
+    "            ), f'Test output does not match reference file: {shortname}: {test_name}'\n",
+    "\n",
     "            print_success(f'{shortname} {test_name} test request complete.')\n",
     "\n",
     "        print_success(f'{test_name} test suite complete.')\n",
@@ -468,7 +475,9 @@
    "id": "b434c1ab-0e5a-40fb-b94a-60ad721c3c5e",
    "metadata": {},
    "source": [
-    "This next cell runs through each of the subset by shapefile tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests."
+    "This next cell runs through each of the subset by shapefile tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests.\n",
+    "\n",
+    "**Note: In all test requests below, the global metadata attribute `Processing Parameters` is omitted from the comparison. This is because the string contains the name of the locally downloaded file within the Harmony container, which is a string representation of a hash. That hash may not be stable between different test runs. This attribute was omitted when generating the original hashed reference files.**"
    ]
   },
   {
@@ -479,6 +488,7 @@
    "outputs": [],
    "source": [
     "test_name = 'subset_by_shapefile'\n",
+    "\n",
     "with TemporaryDirectory() as tmp_dir:\n",
     "    if configuration is not None:\n",
     "        for shortname, test_config in configuration[test_name].items():\n",
@@ -488,18 +498,20 @@
     "                shape=test_config['shape'],\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
-    "            test_reference = Path(\n",
-    "                f'reference_files/{test_output.stem}_reference{test_output.suffix}'\n",
-    "            )\n",
+    "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
     "\n",
     "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
     "            assert exists(\n",
     "                test_output\n",
-    "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "            compare_results_to_reference_file(\n",
-    "                test_output, test_reference, identical=False, coordinates_to_fix=[]\n",
-    "            )\n",
+    "            ), f'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "\n",
+    "            assert h5_matches_reference_hash_file(\n",
+    "                test_output,\n",
+    "                test_reference,\n",
+    "                skipped_metadata_attributes={'Processing Parameters'},\n",
+    "            ), f'Test output does not match reference file: {shortname}: {test_name}'\n",
+    "\n",
     "            print_success(f'{shortname} {test_name} test request complete.')\n",
     "\n",
     "        print_success(f'{test_name} test suite complete.')\n",
@@ -526,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
