GITC-7375: modified HyBIG_Regression.ipynb to include additional tests

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -846,12 +846,323 @@
     "    print('Skipping test: HyBIG regression tests not configured for this environment.')\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cba1fa6a-e548-4254-8004-e3da5460e87c",
+   "metadata": {},
+   "source": [
+    "### Test polar browse image projection:\n",
+    "\n",
+    "This test will run a request using an ASF granule, to demonstrate polar projection. The output will be saved to a separate *polar* directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5e02601-57de-4fb6-a168-87bc99f4ccf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polar_collection = {\n",
+    "    'asf_collection': Collection(id='C1259974840-ASF'),\n",
+    "}\n",
+    "\n",
+    "polar_granule_data = {\n",
+    "    'asf_granules': ['G1269600490-ASF'],\n",
+    "}\n",
+    "\n",
+    "collection_data = {\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': {\n",
+    "        **polar_collection,\n",
+    "        **polar_granule_data,\n",
+    "        'env': Environment.UAT,\n",
+    "    },\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': {\n",
+    "        **polar_collection,\n",
+    "        **polar_granule_data,\n",
+    "        'env': Environment.SIT,\n",
+    "    },\n",
+    "    'http://localhost:3000': {\n",
+    "        **polar_collection,\n",
+    "        **polar_granule_data,\n",
+    "        'env': Environment.LOCAL,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "environment_information = collection_data.get(harmony_host_url)\n",
+    "\n",
+    "if environment_information is not None:\n",
+    "    harmony_client = Client(env=environment_information['env'])\n",
+    "    endpoint_url = environment_information.get('endpoint_url', None)\n",
+    "\n",
+    "output_dir = Path('./hybig-output')\n",
+    "Path.mkdir(output_dir, exist_ok=True)\n",
+    "\n",
+    "# Valid values are 'image/png' and 'image/jpeg':\n",
+    "image_format = 'image/png'\n",
+    "\n",
+    "# Specify a request to create a browse image: \n",
+    "polar_request = Request(\n",
+    "    collection=environment_information['asf_collection'],\n",
+    "    granule_id=environment_information['asf_granules'][0],\n",
+    "    crs='EPSG:4326',\n",
+    "    format=image_format,\n",
+    ")\n",
+    "\n",
+    "# Submit the request and wait for it to complete:\n",
+    "polar_job_id = harmony_client.submit(polar_request)\n",
+    "harmony_client.wait_for_processing(polar_job_id, show_progress=True)\n",
+    "\n",
+    "# Download all of the generated files:\n",
+    "polar_output_dir = output_dir / 'polar'\n",
+    "Path.mkdir(polar_output_dir, exist_ok=True)\n",
+    "downloaded_outputs = [\n",
+    "    file_future.result()\n",
+    "    for file_future in harmony_client.download_all(\n",
+    "        polar_job_id, overwrite=True, directory=polar_output_dir\n",
+    "    )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb48188a-e220-41dd-b420-42bde4812c0b",
+   "metadata": {},
+   "source": [
+    "### Test OPERA anti-meridian granule:\n",
+    "\n",
+    "This test will run a request using an OPERA granule, to demonstrate performance in anti-meridian crossings. The output will be saved to a separate *antimeridian* directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56c04106-320e-483e-a483-07f07fb0d089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "antimeridian_collection = {\n",
+    "    'opera_collection': Collection(id='C1264760805-POCLOUD'),\n",
+    "}\n",
+    "\n",
+    "antimeridian_granule_data = {\n",
+    "    'opera_granules': ['G1273054128-POCLOUD'],\n",
+    "}\n",
+    "\n",
+    "collection_data = {\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': {\n",
+    "        **antimeridian_collection,\n",
+    "        **antimeridian_granule_data,\n",
+    "        'env': Environment.UAT,\n",
+    "    },\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': {\n",
+    "        **antimeridian_collection,\n",
+    "        **antimeridian_granule_data,\n",
+    "        'env': Environment.SIT,\n",
+    "    },\n",
+    "    'http://localhost:3000': {\n",
+    "        **antimeridian_collection,\n",
+    "        **antimeridian_granule_data,\n",
+    "        'env': Environment.LOCAL,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "environment_information = collection_data.get(harmony_host_url)\n",
+    "\n",
+    "if environment_information is not None:\n",
+    "    harmony_client = Client(env=environment_information['env'])\n",
+    "    endpoint_url = environment_information.get('endpoint_url', None)\n",
+    "\n",
+    "output_dir = Path('./hybig-output')\n",
+    "Path.mkdir(output_dir, exist_ok=True)\n",
+    "\n",
+    "# Valid values are 'image/png' and 'image/jpeg':\n",
+    "image_format = 'image/png'\n",
+    "\n",
+    "# Specify a request to create a browse image: \n",
+    "antimeridian_request = Request(\n",
+    "    collection=environment_information['opera_collection'],\n",
+    "    granule_id=environment_information['opera_granules'][0],\n",
+    "    crs='EPSG:4326',\n",
+    "    format=image_format,\n",
+    ")\n",
+    "\n",
+    "# Submit the request and wait for it to complete:\n",
+    "antimeridian_job_id = harmony_client.submit(antimeridian_request)\n",
+    "harmony_client.wait_for_processing(antimeridian_job_id, show_progress=True)\n",
+    "\n",
+    "# Download all of the generated files:\n",
+    "antimeridian_output_dir = output_dir / 'antimeridian'\n",
+    "Path.mkdir(antimeridian_output_dir, exist_ok=True)\n",
+    "downloaded_outputs = [\n",
+    "    file_future.result()\n",
+    "    for file_future in harmony_client.download_all(\n",
+    "        antimeridian_job_id, overwrite=True, directory=antimeridian_output_dir\n",
+    "    )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d409322d-ebe3-4b1e-a5fe-6bf606f29a39",
+   "metadata": {},
+   "source": [
+    "### Test OPERA RTC RGBA and ±80° granule:\n",
+    "\n",
+    "This test will run a request using an OPERA RTC granule, to demonstrate performance with RGBA and ±80° data. Alternatively, MODIS corrected reflectance granules can be used. This collection gets converted to RGBA within the Harmony service chain prior to reaching HyBIG. The output will be saved to a separate *rgba80* directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a02f5355-c7dd-4ade-8471-884610dc1195",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rgba80_collection = {\n",
+    "    'asf_collection': Collection(id='C1259981910-ASF'),\n",
+    "}\n",
+    "\n",
+    "rgba80_granule_data = {\n",
+    "    'asf_granules': ['G1260021568-ASF'],\n",
+    "}\n",
+    " \n",
+    "collection_data = {\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': {\n",
+    "        **rgba80_collection,\n",
+    "        **rgba80_granule_data,\n",
+    "        'env': Environment.UAT,\n",
+    "    },\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': {\n",
+    "        **rgba80_collection,\n",
+    "        **rgba80_granule_data,\n",
+    "        'env': Environment.SIT,\n",
+    "    },\n",
+    "    'http://localhost:3000': {\n",
+    "        **rgba80_collection,\n",
+    "        **rgba80_granule_data,\n",
+    "        'env': Environment.LOCAL,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "environment_information = collection_data.get(harmony_host_url)\n",
+    "\n",
+    "if environment_information is not None:\n",
+    "    harmony_client = Client(env=environment_information['env'])\n",
+    "    endpoint_url = environment_information.get('endpoint_url', None)\n",
+    "\n",
+    "output_dir = Path('./hybig-output')\n",
+    "Path.mkdir(output_dir, exist_ok=True)\n",
+    "\n",
+    "# Valid values are 'image/png' and 'image/jpeg':\n",
+    "image_format = 'image/png'\n",
+    "\n",
+    "# Specify a request to create a browse image: \n",
+    "rgba80_request = Request(\n",
+    "    collection=environment_information['asf_collection'],\n",
+    "    granule_id=environment_information['asf_granules'][0],\n",
+    "    crs='EPSG:4326',\n",
+    "    format=image_format,\n",
+    ")\n",
+    "\n",
+    "# Submit the request and wait for it to complete:\n",
+    "rgba80_job_id = harmony_client.submit(rgba80_request)\n",
+    "harmony_client.wait_for_processing(rgba80_job_id, show_progress=True)\n",
+    "\n",
+    "# Download all of the generated files:\n",
+    "rgba80_output_dir = output_dir / 'rgba80'\n",
+    "Path.mkdir(rgba80_output_dir, exist_ok=True)\n",
+    "downloaded_outputs = [\n",
+    "    file_future.result()\n",
+    "    for file_future in harmony_client.download_all(\n",
+    "        rgba80_job_id, overwrite=True, directory=rgba80_output_dir\n",
+    "    )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7af1cc83-0958-4450-9ec8-44319881df10",
+   "metadata": {},
+   "source": [
+    "### Test PPNG granule:\n",
+    "\n",
+    "This test will run a request using a granule from OPERA DSWX-S1, to demonstrate performance with PPNG data. The input is paletted TIFF data. The output will be saved to a separate *ppng* directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acecb9cc-4637-403c-a84c-c28fa1fdaf27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ppng_collection = {\n",
+    "    'opera_collection': Collection(id='C1264760805-POCLOUD'),\n",
+    "}\n",
+    "\n",
+    "ppng_granule_data = {\n",
+    "    'opera_granules': ['G1269176096-POCLOUD'],\n",
+    "}\n",
+    "\n",
+    "collection_data = {\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': {\n",
+    "        **ppng_collection,\n",
+    "        **ppng_granule_data,\n",
+    "        'env': Environment.UAT,\n",
+    "    },\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': {\n",
+    "        **ppng_collection,\n",
+    "        **ppng_granule_data,\n",
+    "        'env': Environment.SIT,\n",
+    "    },\n",
+    "    'http://localhost:3000': {\n",
+    "        **ppng_collection,\n",
+    "        **ppng_granule_data,\n",
+    "        'env': Environment.LOCAL,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "environment_information = collection_data.get(harmony_host_url)\n",
+    "\n",
+    "if environment_information is not None:\n",
+    "    harmony_client = Client(env=environment_information['env'])\n",
+    "    endpoint_url = environment_information.get('endpoint_url', None)\n",
+    "\n",
+    "output_dir = Path('./hybig-output')\n",
+    "Path.mkdir(output_dir, exist_ok=True)\n",
+    "\n",
+    "image_format = 'image/npng'\n",
+    "\n",
+    "# Specify a request to create a browse image: \n",
+    "ppng_request = Request(\n",
+    "    collection=environment_information['opera_collection'],\n",
+    "    granule_id=environment_information['opera_granules'][0],\n",
+    "    crs='EPSG:4326',\n",
+    "    format=image_format,\n",
+    ")\n",
+    "\n",
+    "# Submit the request and wait for it to complete:\n",
+    "ppng_job_id = harmony_client.submit(ppng_request)\n",
+    "harmony_client.wait_for_processing(ppng_job_id, show_progress=True)\n",
+    "\n",
+    "# Download all of the generated files:\n",
+    "ppng_output_dir = output_dir / 'ppng'\n",
+    "Path.mkdir(ppng_output_dir, exist_ok=True)\n",
+    "downloaded_outputs = [\n",
+    "    file_future.result()\n",
+    "    for file_future in harmony_client.download_all(\n",
+    "        ppng_job_id, overwrite=True, directory=ppng_output_dir\n",
+    "    )\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -865,7 +1176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
